# flight-delay-predictor

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  dockerfile  pyproject.toml
.github/workflows/: pr-tests.yml
data/reports/: validation_results.json
models/: best_tuned_model.pkl  best_tuned_params.json  class_weights.json  gradient_boosting.pkl  lightgbm.pkl  logistic_regression.pkl  preprocessor.joblib  scaler.pkl  xgboost.pkl
reports/: gx_validation.html  validation_airlines.txt  validation_airports.txt  validation_results.json
reports/tables/: cleaning_log_v2.csv  cleaning_summary_v2.json  cleaning_summary_v2.md  dataset_split_summary_v2.json
src/data/: acquire_airline_metadata.py  acquire_airport_metadata.py  clean_merged_dataset.py  download_weather_iem_chunked.py  merge_weather.py  validate_airline_metadata.ipynb  validate_airport_metadata.ipynb  validate_flights_ds.py  validate_merged.py  validate_weather_ds.py
src/data/download_raw_data/: acquire_airline_metadata.py  acquire_airport_metadata.py  download_flights_data.py  download_weather_iem_chunked.py
src/data/final_processed/: merge_data_sources.py
src/data/interim_processing/: combine_flights_ds.py  merge_weather.py
src/features/: feature_engineering.py  feature_selection.py  preprocess.py
src/models/: class_weights.py  hyperparameter_tuning.py  model_comparison.py  model_training.py  model_weight_comparison.py
src/notebooks/: eda.ipynb
tests/: preprocess_test.py  validate_test.py
